--- a/frontend/src/components/ArtCard.module.css
+++ b/frontend/src/components/ArtCard.module.css
@@ -8,6 +8,8 @@
     cursor: pointer;
     border-radius: var(--mantine-radius-md); /* Ensure border-radius is consistent */
     box-shadow: var(--mantine-shadow-lg); /* Use Mantine's shadow */
+    border: none; /* Remove default border */
+    outline: none; /* Remove outline */
   }
   
   .card:hover .image {
@@ -28,7 +30,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background-image: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.85) 90%);
+    background-image: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.25) 90%);
   }
   
   .content {
@@ -47,12 +49,7 @@
     font-size: 1.2rem; /* Increased font size */
   }
   
-  .bodyText {
-    color: var(--mantine-color-dark-2);
-    margin-left: 7px;
-  }
-  
   .description {
-    color: var(--mantine-color-dark-2);
+    color: var(--mantine-color-gray-0);
   }
   
