--- a/frontend/src/components/ArtCarousel.module.css
+++ b/frontend/src/components/ArtCarousel.module.css
@@ -1,27 +1,43 @@
+.controls {
+  transition: opacity 150ms ease;
+  opacity: 0;
+}
+
+.root {
+  &:hover {
+    .controls {
+      opacity: 1;
+    }
+  }
+}
+
 .card {
-    height: rem(440px);
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: flex-start;
-    background-size: cover;
-    background-position: center;
-  }
-  
-  .title {
-    font-family:
-      Greycliff CF,
-      sans-serif;
-    font-weight: 900;
-    color: var(--mantine-color-white);
-    line-height: 1.2;
-    font-size: rem(32px);
-    margin-top: var(--mantine-spacing-xs);
-  }
-  
-  .category {
-    color: var(--mantine-color-white);
-    opacity: 0.7;
-    font-weight: 700;
-    text-transform: uppercase;
-  }
+  height: rem(440px);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+  background-size: cover;
+  background-position: center;
+}
+
+.title {
+  font-family: 'Greycliff CF', sans-serif;
+  font-weight: 900;
+  color: var(--mantine-color-white);
+  line-height: 1.2;
+  font-size: rem(32px);
+}
+
+.category {
+  color: var(--mantine-color-white);
+  font-weight: 700;
+  font-size: rem(16px)
+}
+
+.infoGroup {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
