--- a/frontend/src/pages/About.module.css
+++ b/frontend/src/pages/About.module.css
@@ -1,4 +1,4 @@
-.artPaper {
+.artCarosuel {
     border: 1px solid #e0e0e0;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     padding: 16px;
@@ -12,7 +12,7 @@
   }
   
   .artTitle, .artDate, .artPrice {
-    color: purple;
+    color: black;
   }
   
   .viewButton {
@@ -24,6 +24,7 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     padding: 16px;
     margin-top: 16px;
+    margin-bottom: 16px;
   }
   
   .profileContainer {
